--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ body{
 }
 
 .blue-background{
+	display: none;
 	position: absolute;
 	background-image: linear-gradient(rgba(36,48,131,.48),rgba(0,196,255,0));
 	top: 315px;
@@ -68,6 +69,38 @@ ul, li{
 	left: 36%;
 }
 
+.computer-wrapper h1{
+	position: fixed;
+	z-index: 2;
+	width: 400px;
+	padding: 130px 0 0 219px;
+	font-size: 68px;
+}
+
+.computer-wrapper h2{
+	display: none;
+	position: fixed;
+	z-index: 2;
+	width: 450px;
+	margin: 100px 0 0 125px;
+	font-size: 55px;
+	height: 380px;
+	overflow: scroll;
+}
+
+path {
+  fill: transparent;
+}
+
+text {
+  fill: #FF9800;
+}
+
+
+
+
+
+
 .computer{
 	position: fixed;
     max-width: 693px;
@@ -86,6 +119,19 @@ ul, li{
 
 }
 
+.cable-wrapper{
+	position: absolute;
+	top: 600px;
+	right: 405px;
+}
+
+.cable{
+	position: fixed;
+	max-width: 593px;
+	z-index: 0;
+
+}
+
 .work{background-image: url(../images/computers.png);
 	border-radius: 50px;
 	position: relative;
@@ -95,6 +141,7 @@ ul, li{
 	width: 95%;
 	background-repeat: no-repeat;background-position: center;
 	z-index: 2;
+	background-size: cover;
 }
 
 .work img{
