--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,19 +16,32 @@ body{
     background-repeat: no-repeat;
 }
 
-.title{
-	display: none;
+h1{
+	font-size: 80px;
+}
 
+h2{
+	font-size: 40px;
+}
+
+h3{
+	font-size: 20px;
+}
+
+.title{
+    position: absolute;
+    top: 313px;
+    left: 286px;
 }
 
 .blue-background{
 	position: absolute;
-	background-image: linear-gradient(rgba(36,48,131,.48),rgba(0,196,255,0));
+	background-image: linear-gradient(rgba(36,48,131,65%),rgba(0,196,255,0), rgba(0,196,255,0));
 	top: 315px;
 	height: 1595px;
 	width: 100%;
 	z-index: 0;
-    box-shadow: 0 0 8px 15px rgba(36 48 131 / 48%);
+    box-shadow:0px -30px 10px 15px rgb(36 48 131 / 65%);
 
 
 }
@@ -49,7 +62,7 @@ body{
 .bottom-background{
 	
 	background-image: linear-gradient(rgba(0,196,255,0),rgba(36,48,131,.48));
-	top: 150vh;
+	bottom: 0;
 	right: 0;
 	position: absolute;
 	height: 150vh;
@@ -97,9 +110,13 @@ li{
 	margin-right: 20px;
 }
 
+li:hover{
+	transform: scale(1.5);
+}
+
 .nav-wrapper{
 	position: absolute;
-	top: 300px;
+	top: 460px;
 	left: 76%;
 }
 
@@ -107,11 +124,12 @@ li{
 .nav{
 	position: fixed;
 	z-index: 1;
+	transform: rotate(90deg);
 }
 
 .computer-wrapper{
 	position: absolute;
-	top: 30px;
+	top: 85px;
 	left: 36%;
 }
 
@@ -120,7 +138,21 @@ li{
 	z-index: 2;
 	width: 400px;
 	padding: 130px 0 0 219px;
-	font-size: 68px;
+  text-shadow: 0 0 8px #ffe7b1,
+               0 0 21px #ffbf6f;
+  animation: flicker 3s infinite;
+
+}
+
+@keyframes flicker {
+  0% {text-shadow: 0 0 10px #ffe7b1,
+               0 0 21px #ffbf6f;}
+  50% {text-shadow: 0 0 5px #ffe7b1,
+               0 0 10px #ffbf6f;}
+  75% {text-shadow: 0 0 9px #ffe7b1,
+               0 0 20px #ffbf6f;}             
+  100% {text-shadow: 0 0 10px #ffe7b1,
+               0 0 21px #ffbf6f;}
 }
 
 .computer-wrapper h2{
@@ -129,9 +161,9 @@ li{
 	z-index: 2;
 	width: 450px;
 	margin: 275px 0 0 355px;
-	font-size: 55px;
 	height: 380px;
 	overflow: scroll;
+	text-shadow: 0 0 8px #ffe7b1;
 }
 
 
@@ -149,7 +181,7 @@ li{
 
 .phone{
 	position: fixed;
-	width: 20%;
+	width: 18%;
 	z-index: -1;
 
 }
@@ -164,7 +196,8 @@ li{
 	position: fixed;
 	max-width: 790px;
 	z-index: 0;
-	padding: 875px 0 0 850px;
+	top: 900px;
+	right: -30px;
 
 }
 
@@ -194,7 +227,6 @@ li{
 .work{background-image: url(../images/computers.png);
 	border-radius: 50px;
 	position: relative;
-	top: 100vh;
 	margin: 0 auto;
 	height: 95vh;
 	width: 95%;
@@ -202,6 +234,7 @@ li{
 	background-position: center;
 	z-index: 2;
 	background-size: cover;
+	overflow: hidden;
 }
 
 .work img{
@@ -215,27 +248,49 @@ li{
     margin: 0;
 }
 
+.work-elements{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 100px 0;
+	padding: 0 200px 0 433px;
+
+}
+.display{
+	min-width: 800px;
+}
+
 .screen{
 	opacity: .85;
-    margin: 100px 0 0 433px;
  	width: 800px;
 	height: 400px;
-	background-image: url(../images/whitenoise.png) ;
+	margin-top: 68.547px;
+	background-image: url(../images/whitenoise.gif) ;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .info{
 	margin-top: 50px;
-	margin-left: 433px;
 	width: 800px;
 	height: 200px;
 	background-color: rgba(0, 0, 0, .25);
-	    padding: 29px;
-    box-sizing: border-box;
-    backdrop-filter: blur(8px);
+	padding: 29px;
+  box-sizing: border-box;
+  backdrop-filter: blur(8px);
+}
+
+.skill{
+	width: 50px;
+	height: 50px;
+	background-color: white;
+	border-radius: 50%;
+	display: inline-block;
+	margin-top: 30px;
+	margin-right: 20px;
 }
 
 .folders{
-	position: absolute;
 	display: flex;
 	flex-wrap: wrap;
 	width: 400px;
@@ -243,6 +298,14 @@ li{
 	top: 336px;
 	right: 175px;
 
+}
+
+.category{
+	width: 100px;
+}
+
+.category h4{
+	margin-top: 0;
 }
 
 .folder{
@@ -254,7 +317,43 @@ li{
 	background-repeat: no-repeat;
 	margin-bottom: 50px;
 	margin-left: 1px;
+	transition: transform .25s ease-out, box-shadow .25s ease-out;
 }
 
+.folder:hover{
+	transform: scale(1.2);
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+}
 
+.hero{
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	border: 1px solid red;
+}
+
+.portfolio{
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	border: 1px solid red;
+}
+
+.bottom{
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	border: 1px solid red;
+}
+
+footer{
+	box-sizing: border-box;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	bottom: 0;
+	height: 100px;
+	width: 100%;
+	padding: 0 8%;
+}
 
